test/errors/error13.base
The type of variable 'x' cannot be infered. Add a type annotation.
fun foo() {
   val x;
       ^
